--- a/examples/docs/.vuepress/styles/palette.styl
+++ b/examples/docs/.vuepress/styles/palette.styl
@@ -10,3 +10,7 @@ $codeBgColor = #fafafa//默认背景颜色
 .language-text{
     margin:0 0 !important
 }
+
+.theme-default-content:not(.custom){
+    padding:0
+}
