--- a/packages/theme-chalk/src/icon.scss
+++ b/packages/theme-chalk/src/icon.scss
@@ -1,11 +1,21 @@
 @font-face {
     font-family: "bituan-icons";
     /* Project id 2526420 */
-    src: url('./fonts/iconfont.woff2') format('woff2'),
-        url('./fonts/iconfont.woff') format('woff'),
+    src: url('./fonts/iconfont.woff') format('woff'),
         url('./fonts/iconfont.ttf') format('truetype');
 }
 
+[class^='bt-icon-'],[class*="bt-icon-"]{
+    font-family: 'bituan-icons' !important;
+    speak:none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal; 
+    text-transform: none;
+    line-height: 1;
+    vertical-align: baseline;
+    display: inline-block;
+}
 .bituan-icons {
     font-family: "bituan-icons" !important;
     font-size: 16px;
