--- a/packages/theme-chalk/src/market-drawer.scss
+++ b/packages/theme-chalk/src/market-drawer.scss
@@ -1,61 +1,326 @@
-.bt-market-wrap{
-    width:400px;
-    background-color: #fff;
-    .bt-market-search-wrap{
-        width: 80%;
-        margin: auto;
+#bt-market-wrap {
+  min-width: 360px;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--drawer-bg);
+  height: 100%;
+  box-shadow: 10px 4px 15px 0px rgba(0, 0, 0, 0.1);
+   #modal {
+    .el-dialog {
+      background: var(--dialog-open-bg);
     }
-    .el-input__suffix-inner{
-        display: flex;
-        align-items: center;
-        height: 100%;
+    .el-button--primary {
+      background: var(--dialog-open-know-bg);
+      border: none;
+      min-width: 300px;
+      font-family: PingFangSC-Regular, PingFang SC;
+      font-weight: 400;
+      font-size: 13px;
+      color: #ffffff;
     }
-    .bt-market-nav{
-        display: flex;
-        align-items: center;
-        .active-nav{
-            color:var(--active-Nav-color)
-        }
-     .nav-item{
-         position: relative;
-         padding: 0 10px;
-         cursor: pointer;
-     }
-        .nav-item:not(:last-child){
-         &::after{
-             content: '';
-             position: absolute;
-             height: 17px;
-             width: 1px;
-            //  left: 10px;
-             top: 0;
-             right: 0;
-             bottom: 0;
-             margin: auto;
-             background-color:var(--divid-bg);
-         }
-        }
+    .tip {
+      // word-spacing: -2px;
+      font-family: PingFangSC-Regular, PingFang SC;
+      font-weight: 400;
+      color: #ffffff;
+      font-size: 12px;
+      text-align: left;
+      margin-top: 30px;
     }
-    .bt-market-nav-wrap{
-        display: flex;
-        justify-content: center;
+    #choose-no-tip {
+      color: rgba(53, 125, 225, 1);
     }
-    .bt-market-header-wrap{
-        display: flex;
-        .bt-header-item{
-            display: flex;
-        }
-        .bt-header-icon-wrap{
-            // display: flex;
-            // flex-direction: column;
-            font-size: 0;
-            div{
-                font-size: 10px;
-            }
-           /deep/ .el-icon-caret-top:before{
-                font-size: 10px;
-            }
-        }
+    .content {
+      white-space: pre-line;
+      text-align: left;
+      line-height: 22px;
+      font-family: PingFang-SC-Medium, PingFang-SC;
+      color: #fff;
+      font-weight: 500;
+      font-size: 13px;
+    }
+    .el-dialog__title {
+      color: #fff;
+      font-size: 15px;
+      font-weight: bold;
+    }
+  }
+  .bt-market-content-wrap {
+    overflow-y: scroll;
+    &::-webkit-scrollbar{
+      background-color: var(--search-wrap-bg);
+    }
+    &::-webkit-scrollbar-thumb{
+      background-color: var(--search-input-bg);
+    }
+    &::-webkit-scrollbar-track{
+      background-color: var(--search-wrap-bg);
+    }
+    .no-data-wrap {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      .no-data-text {
+        color: var(--nav-bar-text-color);
+        font-size: 10px;
+        margin-top: 5px;
+        font-family: PingFangSC-Regular, PingFang SC;
+        font-weight: 400;
+      }
+    }
+    .no-data-svg {
+      width: 64px;
+      height: 75px;
+    }
 
+    .star {
+      width: 16px;
+      height: 16px;
+      padding-right: 5px;
     }
+    #active-raw {
+      background: var(--raw-hover-bg);
+    }
+    .bt-market-content-raw {
+      display: flex;
+      height: 30px;
+      align-items: center;
+      #up-color {
+        color: var(--kline-theme-success);
+      }
+      #down-color {
+        color: var(--kline-theme-warning);
+      }
+      &:hover {
+        background: var(--raw-hover-bg);
+      }
+    }
+    .bt-market-price-item {
+      color: #959ca3;
+      width: var(--tabel-price-width);
+      .full-width {
+        display: inline-block;
+        width: 100%;
+      }
+      &:hover {
+        .full-width {
+          transform: translateX(-100%);
+        }
+      }
+    }
+    .bt-market-content-item {
+      display: flex;
+      font-weight: 400;
+      color: #959ca3;
+      font-size: 10px;
+      align-items: center;
+      justify-content: var(--tabel-text-align);
+
+      &:last-child {
+        padding-right: 10px;
+      }
+      &:first-child {
+        flex: 1;
+        padding-left: 20px;
+      }
+      &:nth-child(2) {
+        width: var(--tabel-price-width);
+      }
+      &:nth-child(3) {
+        width: var(--tabel-rose-width);
+      }
+    }
+    #bt-header-rose {
+      font-size: 10px;
+    }
+    #bt-header-coin {
+      color: var(--tabel-coin-text-color);
+      font-size: 10px;
+      img {
+        padding-left: 5px;
+      }
+      .icon-new {
+        width: 30px;
+      }
+      .icon-free {
+        width: 16px;
+      }
+      .icon-hot {
+        width: 12px;
+      }
+    }
+    .tabel-td {
+      font-size: 10px;
+    }
+    // .full-width:first-child {
+    //   display: inline-block;
+    // }
+    // .full-width:nth-child(2) {
+    //   display: none;
+    // }
+
+    .header {
+      height: 42px;
+      display: flex;
+      padding-left: 20px;
+      font-size: 14px;
+      align-items: center;
+      background: var(--search-wrap-bg);
+      color: var(--partition-text-color);
+      p {
+        position: relative;
+        line-height: 25px;
+        &::before {
+          content: '';
+          position: absolute;
+          z-index: 99999;
+          width: 2px;
+          top: 0;
+          left: -10px;
+          bottom: 0;
+          background: var(--partition-text-color);
+        }
+      }
+    }
+  }
+  .bt-market-search-wrap {
+    width: 100%;
+    height: 54px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--search-wrap-bg);
+    margin: auto;
+    .el-icon-circle-close {
+      position: absolute;
+      left: -30px;
+      top: -3px;
+    }
+    .el-input {
+      position: relative;
+      width: 80%;
+    }
+    .el-input__suffix-inner {
+      width: 24px;
+      height: 24px;
+      background: linear-gradient(135deg, #66e2ce 0%, #517af4 100%);
+      box-shadow: 10px 4px 15px 0px rgba(0, 0, 0, 0.1);
+      border-radius: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .el-input__suffix {
+      display: flex;
+      align-items: center;
+    }
+    .el-input__inner {
+      background: var(--search-input-bg);
+      border-color: var(--search-input-bg);
+      height: 34px;
+      color: '#959CA3';
+      box-shadow: 10px 4px 15px 0px rgba(0, 0, 0, 0.1);
+      opacity: 0.5;
+      border-radius: 22px;
+    }
+  }
+   .el-input__suffix-inner {
+    display: flex;
+    align-items: center;
+    height: 100%;
+  }
+  .bt-market-nav {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-around;
+    height: 54px;
+    #active-nav {
+      color: var(--active-Nav-color);
+      &::before {
+        content: '';
+        height: 3px;
+        width: 60%;
+        margin: auto;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        position: absolute;
+        background: var(--active-nav-bottom-color);
+      }
+    }
+    .nav-item {
+      position: relative;
+      padding: 0 25px;
+      cursor: pointer;
+      line-height: 30px;
+      font-size: 14px;
+      font-weight: 400;
+      text-shadow: 10px 4px 15px rgba(0, 0, 0, 0.1);
+      color: var(--nav-bar-text-color);
+    }
+    .nav-item:not(:last-child) {
+      &::after {
+        content: '';
+        position: absolute;
+        height: 17px;
+        width: 1px;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+        background-color: var(--divid-bg);
+      }
+    }
+  }
+  .bt-market-nav-wrap {
+    display: flex;
+    justify-content: center;
+  }
+  .bt-market-header-wrap {
+    display: flex;
+    height: 54px;
+    width: calc(100% - 10px);
+    align-items: center;
+
+    .bt-header-item {
+      display: flex;
+      font-weight: 400;
+      color: #959ca3;
+      font-size: 14px;
+      justify-content: var(--tabel-text-align);
+
+      &:last-child {
+        padding-right: 10px;
+      }
+      &:first-child {
+        flex: 1;
+        padding-left: 20px;
+      }
+      &:nth-child(2) {
+        width: var(--tabel-price-width);
+      }
+      &:nth-child(3) {
+        width: var(--tabel-rose-width);
+      }
+    }
+    .bt-header-icon-wrap {
+      // font-size: 0;
+      display: flex;
+      flex-direction: column;
+      word-spacing: -4px;
+      #updown-active {
+        color: var(--updown-active-color);
+      }
+      span {
+        font-size: 7px;
+        padding-left: 5px;
+        line-height: 7px;
+        height: 7px;
+      }
+    }
+  }
 }
