行情组件文档

--- a/examples/docs/.vuepress/styles/palette.styl
+++ b/examples/docs/.vuepress/styles/palette.styl
@@ -10,7 +10,18 @@ $codeBgColor = #fafafa//默认背景颜色
 .language-text{
     margin:0 0 !important
 }
-
 .theme-default-content:not(.custom){
-    padding:0
+max-width:1080px;
 }
+tr{
+    border-top: none;
+}
+th,td{
+border:none;
+border-bottom:1px solid #dcdfe6;
+text-align:center
+}
+tr:nth-child(2n){
+background-color:transparent;
+}
+
