--- a/examples/docs/.vuepress/styles/collapsible.styl
+++ b/examples/docs/.vuepress/styles/collapsible.styl
@@ -16,6 +16,9 @@
  
   .component-wrapper-demo {
     padding: 24px 24px 15px 24px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
   }
  
   h4 {
@@ -65,6 +68,7 @@
  
   .lock-code {
     border-top: 1px solid #eaeefb;
+    word-spacing:-2px;
     height: 44px;
     box-sizing: border-box;
     background-color: #fff;
@@ -92,6 +96,7 @@
  
     .icon-down {
       transform: translateX(0px);
+          font-size:8px;
       transition: all .1s;
     }
  
@@ -99,7 +104,7 @@
  
     .lock-code-word {
       font-size: 0px;
-      margin-left: 15px;
+      margin-left: 6px;
       display: inline-block;
       transition: all .1s;
       opacity: 0;
