--- a/examples/docs/.vuepress/styles/palette.styl
+++ b/examples/docs/.vuepress/styles/palette.styl
@@ -10,7 +10,7 @@ $codeBgColor = #fafafa//默认背景颜色
 .language-text{
     margin:0 0 !important
 }
-.theme-default-content:not(.custom){
+.theme-default-content:not(.custom),.page-nav{
 max-width:1080px;
 }
 tr{
@@ -19,8 +19,15 @@ tr{
 th,td{
 border:none;
 border-bottom:1px solid #dcdfe6;
-text-align:center
+text-align:center;
+font-size:14px;
 }
+th{
+color:#909399;
+}
+td{
+color:#606266;
+padding:15px;}
 tr:nth-child(2n){
 background-color:transparent;
 }
